--- a/rochesterbeermap/public/index.html
+++ b/rochesterbeermap/public/index.html
@@ -35,6 +35,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt51_fDQCPBoBuU2eSBFp3VoK5bMOLo84"></script>
+    <script src="https://kit.fontawesome.com/e568baa144.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWHpzqTkqcokZ9x7HWJp1x3CANcSGP-NI"></script>
   </body>
 </html>
